# whisper-transcriber

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  LICENSE  PROGRESS.md  README.md  config.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh  transcribe.py
.claude/: settings.local.json
.claude/skills/: .gitkeep
src/: __main__.py  config.py  files.py  home.py  settings.py  summarizer.py  transcriber.py  ui.py
